--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+  <h1 class="titulo">Chalach Tantijibul</h1>
 
   <div class="contenedor">
 
@@ -29,5 +31,11 @@
   </div>
 
   <script src="script.js"></script>
+
+  <footer class="footer">
+  @sarina_official
+  </footer>
+  
 </body>
 </html>
+
