--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Oración</title>
+  <title>Chalach Tantijibul</title>
   <link rel="stylesheet" href="style.css">
+
+  <meta charset="UTF-8">
+  <title>Mi página</title>
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   
@@ -38,4 +42,5 @@
   
 </body>
 </html>
+
 
